--- a/pipex/libft/Makefile
+++ b/pipex/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: mingkang <mingkang@student.42seoul.kr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/12/19 08:08:59 by mingkang          #+#    #+#              #
-#    Updated: 2022/12/24 16:35:14 by mingkang         ###   ########.fr        #
+#    Updated: 2023/02/13 10:20:23 by mingkang         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -17,7 +17,8 @@ ft_memset.c ft_strchr.c ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strncmp.c \
 ft_strnstr.c ft_strrchr.c ft_tolower.c ft_toupper.c ft_calloc.c ft_strdup.c \
 ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c \
 ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
-get_next_line.c get_next_line_utils.c free_strs.c
+get_next_line.c get_next_line_utils.c free_strs.c \
+ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c
 
 B_SRCS	= ${SRCS} ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c \
 ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c
@@ -25,8 +26,6 @@ ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c
 HEADER	= ./includes/
 
 OBJS	= ${SRCS:.c=.o}
-
-B_OBJS	= ${B_SRCS:.c=.o}
 
 NAME	= libft.a
 
@@ -36,29 +35,22 @@ CFLAGS	= -Wall -Wextra -Werror
 
 RM		= rm -f
 
-ifdef BONUS
-	F_OBJS = ${B_OBJS}
-else
-	F_OBJS = ${OBJS}
-endif
-
 all:		${NAME}
 
-${NAME}:	${F_OBJS}
+${NAME}:	${OBJS}
 			ar -csr $@ $^
 
-bonus:
-	make BONUS=1 ${NAME}
-
-.c.o:
-	${CC} ${CFLAGS} -I ${HEADER} -c $< -o ${<:.c=.o}
+%.o:	%.c
+		${CC} ${CFLAGS} -I ${HEADER} -c $< -o $@
 
 clean:
-			${RM} ${B_OBJS}
+			${RM} ${OBJS}
 
 fclean:		clean
 			${RM} ${NAME}
 
-re:			fclean all
+re:
+		${MAKE} fclean
+		${MAKE} all
 
 .PHONY:		all clean fclean re
